fixed z-index

--- a/sass/components/_progress-bar.scss
+++ b/sass/components/_progress-bar.scss
@@ -8,7 +8,7 @@ progress {
   height: 12px;
   border: none;
   background: transparent;
-  /* z-index: 50; */
+  z-index: 500;
 }
 
 progress::-webkit-progress-bar {
